race between CollectionCloner::_findCallback and CollectionCloner::_insertDocuments

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.4.2, 3.5.1
    • Affects Version/s: 3.4.0-rc3
    • Component/s: Replication
    • None
    • Fully Compatible
    • ALL
    • v3.4
    • Repl 2016-11-21
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      While the collection cloner is inserting a single batch of documents into the database in _insertDocuments (before it reaches point where it calls into the collection bulk loader), the getMore command on the sync source may return a failure (for example, collection gets dropped) which terminates the collection cloner by way of the _finishCallback function. _finishCallback destroys the collection bulk loader which maybe trigger an invariant in _insertDocuments running a separate thread.

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Benety Goh (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: