SERVER-27046 CollectionCloner should wait for active inserts to complete before returning error from fetching collection documents